added Manager and Employee entities and their respective classes, refactor.